@startuml
hide empty members

OpenNmeaImpl : OpenNmeaImpl() noexcept
OpenNmeaImpl : virtual ReturnCode open(const char* serial_port, long baudrate) noexcept
OpenNmeaImpl : virtual bool is_open() noexcept
OpenNmeaImpl : virtual ReturnCode close() noexcept
OpenNmeaImpl : virtual ReturnCode take_next(GPGGAData& gpgga) noexcept
OpenNmeaImpl : virtual ReturnCode wait_for_data(NMEA0183DataKindMask data_mask, std::chrono::milliseconds timeout) noexcept

class FixedSizeQueue<typename T, int max_size, typename Container = std::deque<T>>

class SerialInterface<asio::serial_port>

OpenNmeaImpl o-- "n" FixedSizeQueue
OpenNmeaImpl o-- "1" SerialInterface
@enduml
